tests/specs/ecosystem/std/async/0_208_0.test
std/async/0.208.0
-- deno.lock --
{}
===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /retry.ts:83:23
   | 
83 | export async function retry<T>(
   |                       ^^^^^ this function is missing an explicit return type
   | 
   = hint: add an explicit return type of 'Promise<void>' or 'Promise<never>' to the function

  info: all functions in the public API must have an explicit return type
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


